<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_light_gradient"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_aadhar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_white_round"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/verified_logo">

        <ImageView
            android:id="@+id/lay_aadhar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/aadhar_top_layout"
            android:src="@drawable/aadhar_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lay_aadhar_top" />

        <ImageView
            android:id="@+id/img_person"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/square_border"
            android:contentDescription="@string/Image"
            android:scaleType="fitCenter"
            android:src="@drawable/img_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />


        <TextView
            android:id="@+id/txtFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/txtfullName"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_person"
            app:layout_constraintTop_toTopOf="@id/img_person" />

        <TextView
            android:id="@+id/labelDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/LabelDob"
            android:textColor="@color/colorMute"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/img_person"
            app:layout_constraintTop_toBottomOf="@id/txtFullName" />

        <TextView
            android:id="@+id/txtDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/txtDob"
            android:textColor="@color/colorDark"
            app:layout_constraintBottom_toBottomOf="@id/labelDob"
            app:layout_constraintStart_toEndOf="@id/labelDob"
            app:layout_constraintTop_toTopOf="@id/labelDob" />

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txtGender"
            android:textColor="@color/colorDark"
            app:layout_constraintStart_toEndOf="@id/img_person"
            app:layout_constraintTop_toBottomOf="@id/labelDob" />

        <TextView
            android:id="@+id/txtAadharNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txtAadhar"
            android:textColor="@color/colorDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_person"
            app:layout_constraintTop_toBottomOf="@id/txtGender" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_person" />

        <TextView
            android:id="@+id/labelAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/LabelAddress"
            android:textColor="@color/colorMute"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/img_person"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAddress"
            android:textColor="@color/colorDark"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/img_person"
            app:layout_constraintTop_toBottomOf="@id/labelAddress" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtAddress" />

        <ImageView
            android:id="@+id/lay_aadhar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/aadharbottomimg"
            android:src="@drawable/aadhar_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/verified_logo"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/digilocker_verified_badge"
        android:src="@drawable/digilocker_verified_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bg_info_light_round"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/tipsLabel"
            android:textColor="#76757C" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textColor="#4F4F51" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>